src/objects/Account_Product__c.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>product_classification__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_contracted_calc__c</fullName>
        <formula>IF( product_contracted__c ,IMAGE(&apos;/resource/Green_Flag_Icon&apos;,&quot;&quot;,20,20),IMAGE(&apos;/resource/Red_Flag_Icon&apos;,&quot;&quot;,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_name__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tenencia Producto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>product_classification__c</columns>
        <columns>product_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APR-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenencia Productos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>